--- a/.env.copy
+++ b/.env.copy
@@ -1,22 +1,23 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=ALI093JKU902MAK340IOJ203KCW032XZ
+APP_HOST=24-205-115-123.dhcp.hspr.ca.charter.com
 
 DB_DRIVER=mysql
 DB_HOST=localhost
 DB_DATABASE=propcott
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD={removed-from-copy}
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=propcott@gmail.com
+MAIL_PASSWORD={removed-from-copy}
 
 FACEBOOK_CLIENT_ID=1475586926065669
 FACEBOOK_CLIENT_SECRET=6018bdcf9a0252eb399c8e0eaa437c88
