--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,10 @@
 	"keywords": ["framework", "laravel"],
 	"type": "project",
 	"require": {
+		"php": ">=5.4.0",
 		"laravel/framework": "5.0.*",
-		"laravel/socialite": "2.0.4"
+		"laravel/socialite": "2.0.4",
+        "react/react": "0.4.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
@@ -17,7 +19,9 @@
 			"database"
 		],
 		"psr-4": {
-			"App\\": "app/"
+			"App\\": "app/",
+			"Laravact\\": "laravact/src/",
+			"LaravelReactPHP\\": "laravel-reactphp/src/"
 		}
 	},
 	"autoload-dev": {
