--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "aws-sdk": "^2.1.41",
     "cookie-parser": "^1.3.5",
     "twig": "^0.8.2",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
+    "body-parser": "^1.13.3",
+    "node-uuid": "^1.4.3",
+    "validator": "^4.0.1",
+    "bcrypt-nodejs": "0.0.3"
   }
 }
