--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
   "author": "Evan Kennedy",
   "license": "ISC",
   "dependencies": {
-    "express-session": "^1.11.3",
-    "express": "^4.13.1",
-    "session-file-store": "0.0.16",
-    "dotenv": "^1.2.0",
     "aws-sdk": "^2.1.41",
-    "cookie-parser": "^1.3.5",
-    "twig": "^0.8.2",
-    "swig": "^1.4.2",
-    "passport": "^0.2.2",
-    "passport-local": "^1.0.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.3",
+    "cookie-parser": "^1.3.5",
+    "dotenv": "^1.2.0",
+    "express": "^4.13.1",
+    "express-session": "^1.11.3",
     "node-uuid": "^1.4.3",
-    "validator": "^4.0.1",
-    "bcrypt-nodejs": "0.0.3"
+    "passport": "^0.2.2",
+    "passport-facebook": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "session-file-store": "0.0.16",
+    "swig": "^1.4.2",
+    "twig": "^0.8.2",
+    "validator": "^4.0.1"
   }
 }
