--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "passport-local": "^1.0.0",
     "swig": "^1.4.2",
     "validator": "^4.0.1",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    "fibers": "1.0.5",
+    "asyncflow": "^0.2.1"
   }
 }
