--- a/package.json
+++ b/package.json
@@ -10,21 +10,26 @@
   "license": "ISC",
   "dependencies": {
     "async": "^1.4.2",
+    "asyncflow": "^0.2.1",
     "aws-sdk": "^2.1.41",
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.25",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
     "dotenv": "^1.2.0",
+    "es6-module-loader": "^0.17.7",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
+    "fibers": "1.0.5",
     "less": "^2.5.1",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
     "swig": "^1.4.2",
-    "validator": "^4.0.1",
+    "traceur": "0.0.91",
+    "typescript": "^1.6.2",
     "uuid": "^2.0.1",
-    "fibers": "1.0.5",
-    "asyncflow": "^0.2.1"
+    "validator": "^4.0.1"
   }
 }
