--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Reinventing Boycotts",
   "main": "index.js",
   "scripts": {
+    "start": "node-dev --use-strict index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Evan Kennedy",
@@ -16,6 +17,7 @@
     "babel-core": "^5.8.25",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.3",
+    "colors": "^1.1.2",
     "cookie-parser": "^1.3.5",
     "dotenv": "^1.2.0",
     "es6-module-loader": "^0.17.7",
