--- a/package.json
+++ b/package.json
@@ -13,24 +13,22 @@
     "async": "^1.4.2",
     "asyncflow": "^0.2.1",
     "aws-sdk": "^2.1.41",
-    "babel": "^5.8.23",
-    "babel-core": "^5.8.25",
-    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
+    "consolidate": "^0.13.1",
     "cookie-parser": "^1.3.5",
     "dotenv": "^1.2.0",
-    "es6-module-loader": "^0.17.7",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
-    "fibers": "1.0.5",
     "less": "^2.5.1",
+    "mustache": "^2.1.3",
+    "mustache-express": "^1.2.1",
+    "nunjucks": "^2.1.0",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
     "swig": "^1.4.2",
-    "traceur": "0.0.91",
-    "typescript": "^1.6.2",
     "uuid": "^2.0.1",
     "validator": "^4.0.1"
   }
