--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "Reinventing Boycotts",
   "main": "index.js",
   "scripts": {
-    "start": "node-dev --use-strict index.js",
+    "start": "node --use-strict index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Evan Kennedy",
   "license": "ISC",
   "dependencies": {
     "async": "^1.4.2",
-    "asyncflow": "^0.2.1",
     "aws-sdk": "^2.1.41",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.13.3",
