--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "consolidate": "^0.13.1",
     "cookie-parser": "^1.3.5",
     "dotenv": "^1.2.0",
+    "ejs": "^2.3.4",
     "express": "^4.13.1",
+    "express-handlebars": "^2.0.1",
     "express-session": "^1.11.3",
+    "express3-handlebars": "^0.5.2",
+    "handlebars": "^4.0.3",
     "less": "^2.5.1",
     "mustache": "^2.1.3",
     "mustache-express": "^1.2.1",
