--- a/package.json
+++ b/package.json
@@ -18,20 +18,16 @@
     "consolidate": "^0.13.1",
     "cookie-parser": "^1.3.5",
     "dotenv": "^1.2.0",
-    "ejs": "^2.3.4",
     "express": "^4.13.1",
-    "express-handlebars": "^2.0.1",
     "express-session": "^1.11.3",
-    "express3-handlebars": "^0.5.2",
-    "handlebars": "^4.0.3",
+    "hogan": "^1.0.2",
+    "hogan-express": "^0.5.2",
     "less": "^2.5.1",
     "mustache": "^2.1.3",
     "mustache-express": "^1.2.1",
-    "nunjucks": "^2.1.0",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
-    "swig": "^1.4.2",
     "uuid": "^2.0.1",
     "validator": "^4.0.1"
   }
