--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Reinventing Boycotts",
   "main": "index.js",
   "scripts": {
-    "start": "node --use-strict index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node-dev --use-strict index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "lessc less/style.css public/css/style.css"
   },
   "author": "Evan Kennedy",
   "license": "ISC",
@@ -20,8 +21,10 @@
     "dotenv": "^1.2.0",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
+    "handlebars": "^4.0.3",
     "hogan": "^1.0.2",
     "hogan-express": "^0.5.2",
+    "hogan.js": "^3.0.2",
     "less": "^2.5.1",
     "mustache": "^2.1.3",
     "mustache-express": "^1.2.1",
