--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.13.1",
     "express-session": "^1.11.3",
     "less": "^2.5.1",
+    "multer": "^1.0.6",
+    "multer-s3": "^1.3.0",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
