--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ AWS_REGION=us-west-2
  
 FACEBOOK_CLIENT_ID=1475586926065669
 FACEBOOK_CLIENT_SECRET=6018bdcf9a0252eb399c8e0eaa437c88
-FACEBOOK_CALLBACK_URL=http://localhost:3000/oauth/facebook/callback
+FACEBOOK_CALLBACK_URL=http://www.propcott.com/oauth/facebook/callback
 
 TWITTER_CLIENT_ID=bl5yI3EvMBQFqdxrIaM5uC3Vw
 TWITTER_CLIENT_SECRET=WyaobquDx9kEXJaMeLI988s6n4O8mLuOM6UvZTZ6TD9EUWn9I4
