--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
+    "commander": "^2.9.0",
     "consolidate": "^0.13.1",
     "cookie-parser": "^1.3.5",
     "dotenv": "^1.2.0",
